--- a/core/app/event/templates/calendar.html
+++ b/core/app/event/templates/calendar.html
@@ -61,7 +61,7 @@
                 center: 'title',
                 right: 'dayGridMonth,timeGridWeek,timeGridDay'
             },
-            events: '/lgu/event/api/events/',
+            events: '/event/api/events/',
             height: 'auto',
             editable: false,
 
