--- a/core/app/main/templates/dashboard.html
+++ b/core/app/main/templates/dashboard.html
@@ -16,7 +16,18 @@
     <!-- MOBILE TOP BAR -->
     <div class="drawer-content flex flex-col">
       {% include 'navbar.html' %}
-
+      {% if messages %}
+    <div class="container mt-3">
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="close" data-dismiss="alert">
+                    <span>&times;</span>
+                </button>
+            </div>
+        {% endfor %}
+    </div>
+{% endif %}
       <!-- MAIN CONTENT -->
       <div class="p-6">
         <h1 class="text-4xl font-bold mb-8">Welcome back, <span class="text-green-500">{{ name }}</span></h1>
