--- a/core/theme/templates/base.html
+++ b/core/theme/templates/base.html
@@ -25,8 +25,11 @@
         html,body{
             width: 100%;
             height:100%;    
+		background-color:white;
         }
-
+	input{
+background-color:white;
+}
         .poppins-thin {
   font-family: "Poppins", sans-serif;
   font-weight: 100;
