--- a/core/theme/templates/base.html
+++ b/core/theme/templates/base.html
@@ -1,6 +1,6 @@
 {% load static tailwind_tags %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <title>{% block title %}{% endblock title %}</title>
     <meta charset="UTF-8">
@@ -24,7 +24,8 @@
     <style>
         html,body{
             width: 100%;
-            height:100%;    
+            height:100%;  
+            background-color: white;  
         }
 
         .poppins-thin {
